--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,10 +5,22 @@
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+body, html{
+    background: url(../imagens/mercado.jpg) no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 header{
     text-align: center;
     padding: 20px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.716);
+}
+
+h1{
+    color: greenyellow;
+    text-shadow: 2px 2px 1px darkred;
 }
 
 main{
@@ -20,11 +32,43 @@ main{
 }
 
 div{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: column wrap;
     background-color: white;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 5px 5px 20px black;
+    height: 200px;
+    width: 350px;
+}
+
+input{
+    height: 2em;
+    width: 250px;
+    text-align: right;
+    font-size: 1em;
+    background-color: greenyellow;
+    border:  1px dashed black;
+    border-style: ;
+}
+
+input:hover{
+    border: 1px solid black;
+}
+
+
+span{
+    font-size: 1.5em;
+    font-weight: bolder;
+}
+
+.cur2{
+    margin-right: 15px;
 }
 
 
 footer{
-    text-align: center;
+    text-align: right;
+    color: white;
+    margin-right: 30px;
 }
